styles.css
h1 {
    text-align: center
}

.main_heading, .Jumbotron {
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    /*background-color: ENTER COLOUR */
}

p {
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    
}

.top-body {
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding: 30px;
    /*background-color:thistle;*/
}

hr {
    height: 3px;
}

